--- a/_posts/2022-08-14-welcome.markdown
+++ b/_posts/2022-08-14-welcome.markdown
@@ -6,7 +6,7 @@ categories: goals
 ---
 
 Even though I am a busy person, I always try to strive to hit my goals. 
-This very site was a goal of mine for a while. I hope to continue building upon it and creating content that useful for others within the IT field. 
+This very site has been a goal of mine. I hope to continue building upon it and creating content that useful for others within the field of Information Technology.
 I will be using this site to update my portfolio and document personal projects in the future. 
 
 Feel free to subscribe, if that is something that is of interest to you. 
