--- a/_posts/2022-08-14-welcome.markdown
+++ b/_posts/2022-08-14-welcome.markdown
@@ -2,7 +2,7 @@
 layout: single
 title:  "Website Goals"
 date:   2022-08-14 08:00:00 -0700
-categories: goals
+tags: goals
 ---
 
 Even though I am a busy person, I always try to strive to hit my goals. 
