--- a/_posts/3022-08-13-template.markdown
+++ b/_posts/3022-08-13-template.markdown
@@ -2,7 +2,7 @@
 layout: single
 title:  "Welcome to Jekyll!"
 date:   3022-08-13 17:59:47 -0700
-categories: jekyll update
+tags: jekyll update
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
